--- a/multi-file-upload-editor-docker.yaml
+++ b/multi-file-upload-editor-docker.yaml
@@ -1,5 +1,5 @@
 ---
-name: "Multi File Upload Editor Docker"
+name: "Multi File Upload Editor"
 author: "error311"
 version: "latest"
 description: >
